@@ -1,2 +1,2 @@
-VERSION=9.02.06
+VERSION=9.02.07
 YEARS=1992-2018
