@@ -198,6 +198,6 @@ manpageseealso()
     bf(icmake)(1), bf(icmbuild)(1), bf(icmconf)(7), bf(icmstart.rc)(7).
 
 manpagebugs()
-    None reported
+    Path names containing blanks are not supported.
 
 includefile(trailer.inc)
