@@ -1,4 +1,6 @@
 #include "aux.ih"
 
-char        *ga_bimname;
-unsigned      ga_offset;
+char           *ga_bimname;
+unsigned        ga_offset;
+struct termios  ga_termios; 
+
